<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="fi.shaynek.parliamentfinland.ui.fragments.HomeFragment"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_partiesFragment"
            app:destination="@id/partiesFragment" />
        <action
            android:id="@+id/action_homeFragment_to_partyDetailedFragment"
            app:destination="@id/partyDetailedFragment" />
        <action
            android:id="@+id/action_homeFragment_to_aboutParliamentFragment"
            app:destination="@id/parliamentHistoryFragment" />
        <action
            android:id="@+id/action_homeFragment_to_allMembersFragment"
            app:destination="@id/allMembersFragment" />
        <action
            android:id="@+id/action_homeFragment_to_aboutParliamentFragment2"
            app:destination="@id/aboutParliamentFragment2" />
    </fragment>
    <fragment
        android:id="@+id/partiesFragment"
        android:name="fi.shaynek.parliamentfinland.ui.fragments.PartiesFragment"
        android:label="@string/fragment_parties"
        tools:layout="@layout/fragment_parties" >
        <action
            android:id="@+id/action_partiesFragment_to_partyDetailedFragment"
            app:destination="@id/partyDetailedFragment" />
    </fragment>
    <fragment
        android:id="@+id/partyDetailedFragment"
        android:name="fi.shaynek.parliamentfinland.ui.fragments.PartyDetailedFragment"
        android:label="@string/fragment_party_detailed"
        tools:layout="@layout/fragment_party_detailed" >
        <action
            android:id="@+id/action_partyDetailedFragment_to_memberDetailsFragment"
            app:destination="@id/memberDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/memberDetailsFragment"
        android:name="fi.shaynek.parliamentfinland.ui.fragments.MemberDetailsFragment"
        tools:layout="@layout/fragment_member_details"
        android:label="@string/MemberDetailsFragment" >
        <action
            android:id="@+id/action_memberDetailsFragment_to_commentsFragment"
            app:destination="@id/commentsFragment" />
    </fragment>
    <fragment
        android:id="@+id/commentsFragment"
        android:name="fi.shaynek.parliamentfinland.ui.fragments.CommentsFragment"
        android:label="@string/fragment_comments"
        tools:layout="@layout/fragment_comments" />
    <fragment
        android:id="@+id/parliamentHistoryFragment"
        android:name="fi.shaynek.parliamentfinland.ui.fragments.ParliamentHistoryFragment"
        android:label="@string/parliament_history_fragment"
        tools:layout="@layout/fragment_parliament_history" />
    <fragment
        android:id="@+id/allMembersFragment"
        android:name="fi.shaynek.parliamentfinland.ui.fragments.AllMembersFragment"
        android:label="@string/fragment_all_members"
        tools:layout="@layout/fragment_all_members" />
    <fragment
        android:id="@+id/aboutParliamentFragment2"
        android:name="fi.shaynek.parliamentfinland.ui.fragments.AboutParliamentFragment"
        android:label="@string/fragment_about_parliament"
        tools:layout="@layout/fragment_about_parliament" />
</navigation>