<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:clickable="true"
    android:focusable="true"
    android:layout_margin="10dp"
    android:layout_height="400dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical">
        <ImageView
            android:contentDescription="@string/member_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/member_image_large"
            android:layout_weight="0.60"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="0.25">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:paddingStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/all_members_heteka_id"
                    android:hint="@string/heteka_id"/>
                <TextView
                    android:paddingStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/all_members_name"
                    android:hint="@string/first_name"/>

                <TextView
                    android:paddingStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/all_members_seatNumber"
                    android:hint="@string/seat_no"/>
                <TextView
                    android:paddingStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/all_members_twitter"
                    android:hint="@string/twitter"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/all_members_contituency"
                    android:hint="@string/constituency"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/all_members_party"
                    android:hint="@string/party"/>
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:id="@+id/all_members_minister"
                    android:text="@string/minister"/>
<!--                <Button-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/follow"-->
<!--                    android:id="@+id/all_members_follow_twitter"/>-->
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:weightSum="1"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:orientation="horizontal"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="0.3"
                android:layout_marginHorizontal="20dp"
                android:id="@+id/dislike_count_layout"
                android:contentDescription="@string/dislike">
                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_dislike"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/dislike_count"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:text="@string/comments"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="0.3"
                android:layout_marginHorizontal="20dp"
                android:id="@+id/comments_count_layout"
                android:contentDescription="@string/comment">
                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_comment"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/comment_count"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:text="@string/comments"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="0.3"
                android:layout_marginHorizontal="20dp"
                android:id="@+id/likes_count_layout"
                android:contentDescription="@string/likes">
                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_likes"/>
                <TextView
                    android:gravity="center_vertical"
                    android:id="@+id/likes_count"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/likes"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>