<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".ui.fragments.ParliamentHistoryFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/parliamentHead_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="38dp"
            android:gravity="center"
            android:text="@string/parliament_finland"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/parl_building"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/parliament_building_fin" />

        <TextView
            android:id="@+id/aboutParliamentHead_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="38dp"
            android:gravity="center"
            android:text="@string/about_parliament_head"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/aboutParliament_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/historyHead_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="38dp"
            android:gravity="center"
            android:text="@string/history_head"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/history_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/oldParliament"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="70dp"
            android:scaleType="fitXY"
            android:src="@drawable/eduskunta1907" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parliament_1907"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/senate"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="70dp"
            android:scaleType="fitXY"
            android:src="@drawable/senate1917" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senate"
            android:textSize="15sp" />


    </LinearLayout>
</ScrollView>
