<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/profile_picture" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/heteka_id_wrapper"
            android:layout_width="match_parent"
            style="@style/outlined_text_input"
            android:layout_height="wrap_content"
            android:layout_below="@+id/photo"
            android:hint="@string/heteka_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/heteka_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/outlined_text_input"
            android:layout_below="@id/heteka_id_wrapper"
            android:hint="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/outlined_text_input"
            android:layout_below="@id/first_name_wrapper"
            android:hint="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/seat_number_wrapper"
            android:layout_width="match_parent"
            style="@style/outlined_text_input"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_name_wrapper"
            android:hint="@string/seat_no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/seat_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/minister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_below="@+id/seat_number_wrapper"
            android:text="@string/minister" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/party_wrapper"
            android:layout_width="match_parent"
            style="@style/outlined_text_input"
            android:layout_height="wrap_content"
            android:layout_below="@id/minister"
            android:hint="@string/party">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/party"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/twitter_layout"
            android:gravity="center_vertical"
            android:layout_below="@id/party_wrapper">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/twitter_wrapper"
                android:layout_alignParentStart="true"
                android:layout_width="200dp"
                style="@style/outlined_text_input"
                android:layout_height="wrap_content"
                android:hint="@string/twitter">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/twitter"
                    android:textColor="@color/primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/twitter_followBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/twitter_wrapper"
                android:clickable="true"
                android:layout_centerVertical="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="10dp"
                android:backgroundTint="@color/white">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/follow"
                        android:textColor="@color/primary"
                        android:textSize="25sp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_twitter"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/borne_year_wrapper"
            style="@style/outlined_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/twitter_layout"
            android:hint="@string/born_year">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/borne_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/constituency_wrapper"
            android:layout_width="match_parent"
            style="@style/outlined_text_input"
            android:layout_height="wrap_content"
            android:layout_below="@id/borne_year_wrapper"
            android:hint="@string/constituency">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/constituency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/constituency_wrapper"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingTop="20dp"
            android:weightSum="1">


            <Button
                android:id="@+id/previous"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="0.5"
                android:background="@android:drawable/ic_media_previous" />

            <Button
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="0.5"
                android:background="@android:drawable/ic_media_next" />

        </LinearLayout>


    </RelativeLayout>

</ScrollView>