<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/party_member_card"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/party_member_img"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/party_member_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/party"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/party_member_constituency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/party_members_seat_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:hint="@string/count"
            android:padding="20dp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
